<resources>
    <string name="app_name">Password_Manager_zd1_Zamerchuk</string>
    <string name="p_manager">Password Manager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Auth">Authorization</string>
    <string name="In">Sing In</string>
    <string name="Up">Sing Up</string>
    <string name="remember_me">Remember me</string>
</resources>